--- a/css/hub.css
+++ b/css/hub.css
@@ -21,21 +21,51 @@ body {
     font-family: 'Adieu';
     src: url('../fonts/Adieu.otf');
 }
-.navbar{
-    display: flex;
+
+header {
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    transition: top 0.2s ease-in-out;
 }
+
+
+.hidden {
+  display: none;
+}
+
+
+.navbar{
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.3s ease-out;
+    padding-bottom: 1vw;
+    border-bottom: 1px solid white;
+}
+
+.navbar.scrolling-up {
+    transform: translateY(-100%);
+}
+
 
 a {
     color: white;
-    font-family: 'Adieu';
-    font-size: 1.1vw;
+    font-family: 'GothamBook';
+    font-size: 1vw;
 }
 .logo {
-    margin-left: 3%;
-    margin-top: 2%;
-    margin-right: 0%;
-    margin-bottom: auto;
+    width: 3vw;
+    margin-bottom: 5vw;
 }
+
+img.logo {
+    margin: auto;
+  }
 
 .logo-colloque {
     width: 30vw;
@@ -50,9 +80,9 @@ a {
 .navbard {
     color: white;
     display: flex;
-    margin-left: 7vw;
-    margin-top: 4%;
-    margin-right: 20%;
+
+    margin-top: 1vw;
+    margin-right: 22vw;
 }
 
 .bar{
@@ -99,5 +129,5 @@ p {
     align-items: center;
     justify-content: center;
     font-size: 3vw;
-    height: 7vw;
+    height: 800vw;
 }
