--- a/css/hub.css
+++ b/css/hub.css
@@ -1,7 +1,3 @@
-body {
-    background-color: black;
-}
-
 @font-face {
     font-family: 'FuturaPTDemi';
     src: url('..//fonts/FuturaPTDemi.otf');
@@ -18,8 +14,31 @@ body {
 }
 
 @font-face {
+    font-family: 'GothamBold';
+    src: url('../fonts/GothamBold.otf');
+}
+
+@font-face {
     font-family: 'Adieu';
     src: url('../fonts/Adieu.otf');
+}
+
+body {
+    background-color: black;
+}
+
+.premiere-partie {
+    background-image: url(../images/background.png); 
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.troisieme-partie {
+    background-image: url(../images/background2.png); 
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 header {
@@ -39,13 +58,14 @@ header {
 
 
 .navbar{
-    background-color: black;
+    background-image: url(../images/gradient.png);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    padding-top: 2vw;
     display: flex;
-    align-items: center;
-    justify-content: center;
     transition: transform 0.3s ease-out;
     padding-bottom: 1vw;
-    border-bottom: 1px solid white;
+    justify-content: space-evenly;
 }
 
 .navbar.scrolling-up {
@@ -59,15 +79,9 @@ a {
     font-size: 1vw;
 }
 .logo {
-    width: 3vw;
+    width: 1.5vw;
     margin-bottom: 5vw;
 }
-
-img.logo {
-    margin: auto;
-    margin-right: 30%;
-  }
-
 .logo-colloque {
     width: 30vw;
 }
@@ -81,16 +95,18 @@ img.logo {
 .navbard {
     color: white;
     display: flex;
-
     margin-top: 1vw;
-    margin-right: 22vw;
 }
 
-.bar{
+
+
+.navbard a {
+    color: white;
+    font-family: 'GothamBook';
+    font-size: 1vw;
+    margin-right: 2vw;
     white-space: nowrap;
-    margin-right: 30%;
-    text-decoration: solid;
-    text-decoration-color: white;
+    text-decoration: none;
 }
 
 a{
@@ -103,9 +119,7 @@ a:visited {
 }
 
 a:hover{
-    font-size: 1.2vw;
-    margin-right: 6vw;
-    letter-spacing: 0.1vw;
+    font-size: 1.1vw;
 }
 
 p {
@@ -118,18 +132,123 @@ p {
 }
 
 .titre {
-    display: flex;
+    font-family: "GothamBook";
     align-items: center;
     justify-content: center;
-    height: 10vw;
-    margin-top: 2vw;
+    height: 3vw;
+    margin-top: 32vw;
+    margin-left: 5vw;
     font-size: 3vw;
 }
 
 .titre2 {
-    display: flex;
+    font-family: "GothamBold";
     align-items: center;
     justify-content: center;
-    font-size: 3vw;
-    height: 800vw;
+    margin-left: 5vw;
+    font-size: 8vw;
+}
+
+.titre3 {
+    font-family: "GothamBold";
+    padding-left: 13vw;
+    font-size: 1.7vw;
+    padding-top: 13vw;
+}
+
+.titre4 {
+    font-family: "GothamBook";
+    align-items: center;
+    justify-content: center;
+    height: 3vw;
+    margin-top: 40vw;
+    margin-left: 16vw;
+    font-size: 2.9vw;
+}
+
+.titre5 {
+    font-family: "GothamBold";
+    margin-left: 16vw;
+    font-size: 4vw;
+    padding-top: 0.5vw;
+}
+
+.titre6 {
+    font-family: "GothamBook";
+    align-items: center;
+    justify-content: center;
+    height: 3vw;
+    margin-top: 15vw;
+    margin-left: 16vw;
+    font-size: 2.9vw;
+}
+
+.paragraphe {
+    font-family: "GothamBook";
+    padding-left: 13vw;
+    padding-top: 1vw;
+    font-size: 1.11vw;
+}
+
+.paragraphe em {
+    font-family: "GothamBold";
+}
+
+.bloctexte {
+    display: block;
+}
+
+.bloc {
+    display: flex;
+}
+
+.imageparagraphe {
+    width: 28vw;
+    height: 15vw;
+    margin-left: 7vw;
+    margin-top: 10vw;
+}
+
+.bouton {
+    padding-top: 0.6vw;
+    padding-bottom: 0.6vw;
+    padding-left: 1.8vw;
+    padding-right: 1.8vw;
+    border: 1px solid white;
+    border-radius: 5px / 5px;
+    font-family: "GothamBook";
+    margin-top: 43vw;
+    font-size: 1.4vw;
+    margin-left: 13vw;
+}
+
+
+.blocimage {
+    display: flex;
+    margin-left: 16vw;
+    margin-top: 2vw;
+    gap: 2vw;
+
+}
+
+.carte2022 {
+    position: relative;
+}
+
+.carte2023 {
+    position: relative;
+}
+
+.textecarte {
+    font-size: 1.8vw;
+    font-family: "GothamBold";
+    position: absolute;
+}
+
+.textecarte2 {
+    font-size: 1.6vw;
+    font-family: "GothamBold";
+    position: absolute;
+    left: 55rem;
+    bottom: -113rem;
 }
