--- a/HUB/css/hub.css
+++ b/HUB/css/hub.css
@@ -144,10 +144,12 @@ p {
 
 .hamburger-lines {
     display: none;
+
 }
 
 .checkbox {
     display: none;
+    color: #000000;
 }
 
 .titre2 {
@@ -179,8 +181,6 @@ p {
 
 .titre6 {
     font-family: 'Gotham Light', sans-serif;
-    align-items: center;
-    justify-content: center;
     height: 3vw;
     margin-top: 15vw;
     font-size: 2.9vw;
@@ -360,6 +360,25 @@ p {
     margin-right: 9vw;
 }
 
+.noustrouver {
+    display: flex;
+    flex-direction: column;
+    margin-left: 11vw;
+    margin-right: 9vw;
+}
+
+.maps {
+    margin-top: 1vw;
+}
+
+.noustrouvertext {
+    display: flex;
+}
+
+.bold {
+    font-family: "Gotham Black";
+}
+
 @media (max-width: 768px) {
     .corps {
         display: flex;
@@ -449,6 +468,15 @@ p {
     .menu-itemps {
         display: block;
     }
+    .checkbox {
+        color: #000000;
+    }
+    .noustrouvertext {
+        justify-content: center;
+    }
+    .maps {
+        margin-top: 3vw;
+    }
 }
 
 
@@ -459,7 +487,6 @@ iframe.maps {
 	top: 3280px;
 	border: 1px solid #000000;
 	border-radius: 20px;
-	margin: auto;
 }
 	
 div.maps {
@@ -618,7 +645,7 @@ div.maps {
       height: 4px;
       width: 100%;
       border-radius: 10px;
-      background: #fff;
+      background: grey;
     }
     
     .nav-container .hamburger-lines .line1 {
@@ -680,5 +707,6 @@ div.maps {
     
     .nav-container input[type="checkbox"]:checked ~ .logo{
       display: none;
+      color: #000000;
     }
   }
